@@ -1,4 +1,4 @@
-This software is copyright (c) 2023 by Chad Granum.
+This software is copyright (c) 2024 by Chad Granum.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
@@ -12,7 +12,7 @@ b) the "Artistic License"
 
 --- The GNU General Public License, Version 1, February 1989 ---
 
-This software is Copyright (c) 2023 by Chad Granum.
+This software is Copyright (c) 2024 by Chad Granum.
 
 This is free software, licensed under:
 
@@ -272,7 +272,7 @@ That's all there is to it!
 
 --- The Perl Artistic License 1.0 ---
 
-This software is Copyright (c) 2023 by Chad Granum.
+This software is Copyright (c) 2024 by Chad Granum.
 
 This is free software, licensed under:
 
