@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.030.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.032.
 use strict;
 use warnings;
 
@@ -22,7 +22,6 @@ my %WriteMakefileArgs = (
     "Scalar::Util" => 0
   },
   "TEST_REQUIRES" => {
-    "Test2::Tools::Tiny" => "1.302097",
     "utf8" => 0
   },
   "VERSION" => "0.019",
@@ -36,7 +35,6 @@ my %FallbackPrereqs = (
   "Carp" => 0,
   "List::Util" => 0,
   "Scalar::Util" => 0,
-  "Test2::Tools::Tiny" => "1.302097",
   "utf8" => 0
 );
 
