@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.032
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Carp" => "0";
@@ -10,7 +10,6 @@ recommends "Unicode::GCString" => "2013.10";
 recommends "Unicode::LineBreak" => "2015.06";
 
 on 'test' => sub {
-  requires "Test2::Tools::Tiny" => "1.302097";
   requires "utf8" => "0";
 };
 
