@@ -31,8 +31,7 @@ List::Util   = 0
 Scalar::Util = 0
 
 [Prereqs / TestRequires]
-Test2::Tools::Tiny = 1.302097
-utf8               = 0
+utf8 = 0
 
 [Prereqs / RuntimeRecommends]
 Term::Size::Any    = 0.002
