@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix use cycle between Test-Simple and Term::Table now that Test2::Suite was merged into Test-Simple
+
 0.018     2023-10-22 21:55:51-07:00 America/Los_Angeles
 
     - Merged doc fix PR
